# vadankhan-wavelength-spectra-analyser

./: .gitignore  README.md  pyproject.toml  vadankhan_spectrumanalysis.bat
vadankhan_wavelength_spectra_analyser/: spectrum_files_transform.ipynb  spectrum_files_transform_watchdog.py
