[tool.poetry]
name = "vadankhan-wavelength-spectra-analyser"
version = "0.1.0"
description = ""
authors = ["VadanKhan <vadankhan1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
scipy = "^1.15.2"
dask = "^2025.3.0"
pyarrow = "^19.0.1"
polars = "^1.27.1"
pillow = "^11.2.1"
watchdog = "^6.0.0"
ipykernel = "^6.29.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
